feat(bestiary): add ActiveMonster class and enhance monster management with proximity checks and activity tracking